--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ const feature =
 	<Hero data={feature} />
 	<Feature data={feature} />
 	<Collections />
+    <p>hejsa</p>
 </MainLayout>
 
 <script>
