--- a/src/components/game/DressUpImg.astro
+++ b/src/components/game/DressUpImg.astro
@@ -11,12 +11,12 @@
 ---
 
 
-  <!--   <div class="container">
+<!--    <div class="container">
         <div class="cloth_container">
             {products.map(product => {
-            if (product.category === category) {
+            if (product.category === "tops") {
                 return (
-                    <div class="card" draggable="true" key={product.id}>
+                    <div class="card"  draggable="true" key={product.id}>
                             <img src={product.image} alt={product.imageAlt || alt} />
                     </div>
         
@@ -24,13 +24,13 @@
             }
             })}
         </div>
-    </div> -->
+    </div>  -->
 
     <article class="container">
         <div class="card" draggable="true">
             <img src={src} alt={alt}>
         </div>
-    </article> 
+    </article>  
 
 <style>
     
@@ -44,14 +44,13 @@
         width: 110px;
         height:110px;
         border-radius: black;
-        /* position: absolute; */
+         /* position: absolute;  */
     }
- 
 
    
 </style>
 
-<script>
+ <script>
     let offsetX = 0, offsetY = 0;
      let isMoving = false;
     document.querySelectorAll('.card').forEach(card => {
@@ -60,7 +59,7 @@
     card.addEventListener("click", toggleMove)
 
   function toggleMove(e) {
-    card.style.position = "absolute";
+     card.style.position = "absolute";
         if (!isMoving) {
             // Start moving the card
             offsetX = e.clientX - card.offsetLeft;
@@ -83,4 +82,4 @@
       });
 
  
-</script>
+</script> 
