--- a/src/components/game/DressUpSetUp.astro
+++ b/src/components/game/DressUpSetUp.astro
@@ -1,30 +1,48 @@
 ---
 const {category} = Astro.props
-import DressUpImg from "./DressUpImg.astro"
- export const products = await fetch("https://ujeckodeljhzamhwlhsj.supabase.co/rest/v1/products",{
+import MainLayout from "../../layouts/MainLayout.astro";
+import DressUpImg from "./DressUpImg.astro";
+
+const data = await fetch("https://ujeckodeljhzamhwlhsj.supabase.co/rest/v1/products",
+{
     method: "GET",
     headers: {
         apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVqZWNrb2RlbGpoemFtaHdsaHNqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTU1MDI3ODIsImV4cCI6MjAzMTA3ODc4Mn0.qKKBr9i_Jy2NzTfbu_jinScWs6PmGaBMoeK-1WHbmcU"
     }
   }).then((res) => res.json());
-
-//   const productsInCategory = products.filter((product) => product.category === category);
 ---
-    <div class="cloth_grid">
+
+     <section>
+        <div class="cloth_grid">
+     {
+            data.map((item) => {
+                if(item.category === category)
+             return <DressUpImg data={item} />;
+            
+            })
+        }
+        </div>
+    </section> 
+
+
+
+ 
+  <!--   <div class="cloth_grid">
         {
             //For hver ITEM indeni array'et "items", så returnerer vi et Card med et enkelt ITEM som prop.
-            products.map((product) => {
+            data.map((item) => {
             if (product.category === category) {
-                return  <DressUpImg  src={product.image} id={product.id} alt={product.name} />;
+                return  <DressUpImg data={item} />;
             }
             })
         }
-        <!-- {
+         {
             <div id={productsInCategory[0].id}>
                 <img src={productsInCategory[0].image} />
             </div>
-        } -->
+        } 
     </div>
+    -->
 
 
 <style>
@@ -33,4 +51,4 @@ import DressUpImg from "./DressUpImg.astro"
         grid-template-columns: 1fr 1fr 1fr;
         row-gap:100px
     }
-</style>
+</style>  
