--- a/src/components/game/DressUpImg.astro
+++ b/src/components/game/DressUpImg.astro
@@ -5,8 +5,8 @@
 ---
 
 
-    <article class=`container item_${item.category}` id={item.id}>
-        <div class="card" draggable="true">
+    <article class=`container item_${item.category}`>
+        <div class="card" draggable="true" id={item.id}>
             <div>
                 <h2 class="hide">{item.name}</h2>
                 <img src={item.image} alt={item.name}>
