springer ved skift af kategori

--- a/src/components/game/DressUpImg.astro
+++ b/src/components/game/DressUpImg.astro
@@ -49,6 +49,10 @@
         border-radius: black;
          /* position: absolute;  */
     }
+        .position_absolute{
+        position: absolute;
+      
+     }
 
    
 </style>
