--- a/src/components/game/DressUpSetUp.astro
+++ b/src/components/game/DressUpSetUp.astro
@@ -41,4 +41,9 @@
         grid-template-columns: 1fr 1fr 1fr;
         row-gap:100px
     }
+       .position_absolute{
+        position: fixed;
+     }
+
+     
 </style>  
